Logs and Cron Job added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -7,7 +8,9 @@
     "express-validator": "^7.2.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "node-cron": "^3.0.3",
+    "tiny-uid": "^1.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
@@ -18,7 +21,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index"
+    "dev": "nodemon src/index",
+    "log": "node src/logService/index",
+    "devLog": "nodemon src/logService/index"
   },
   "author": "",
   "license": "ISC",
