--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index",
+    "start": "node src/index",
     "log": "node src/logService/index",
     "devLog": "nodemon src/logService/index"
   },
